crates/nyx-lexer/tests/snapshots/integration_tests__expressions__field_access_chained.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Struct
- Ident: Inner
- Newline
- Indent
- Ident: value
- Colon
- I32
- Newline
- Dedent
- Struct
- Ident: Outer
- Newline
- Indent
- Ident: inner
- Colon
- Ident: Inner
- Newline
- Ident: label
- Colon
- LBracket
- U8
- RBracket
- Newline
- Dedent
- Func
- Ident: deep_field
- LParen
- Ident: o
- Colon
- Ident: Outer
- RParen
- Arrow
- I32
- Newline
- Indent
- Return
- Ident: o
- Dot
- Ident: inner
- Dot
- Ident: value
- Newline
- Dedent
