crates/nyx-lexer/tests/snapshots/integration_tests__expressions__logical.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Func
- Ident: logical_ops
- LParen
- Ident: a
- Colon
- Bool
- Comma
- Ident: b
- Colon
- Bool
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Let
- Ident: and
- Eq
- Ident: a
- AndAnd
- Ident: b
- Newline
- Let
- Ident: or
- Eq
- Ident: a
- OrOr
- Ident: b
- Newline
- Pass
- Newline
- Dedent
