crates/nyx-lexer/tests/snapshots/integration_tests__expressions__method_call.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Struct
- Ident: Counter
- Newline
- Indent
- Ident: count
- Colon
- I32
- Newline
- Dedent
- Func
- Ident: Counter
- Colon
- Colon
- Ident: increment
- LParen
- Star
- Mut
- SelfLower
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: Counter
- Colon
- Colon
- Ident: get
- LParen
- Star
- SelfLower
- RParen
- Arrow
- I32
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: use_counter
- LParen
- Ident: c
- Colon
- Star
- Mut
- Ident: Counter
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Ident: c
- Dot
- Ident: increment
- LParen
- RParen
- Newline
- Let
- Ident: v
- Eq
- Ident: c
- Dot
- Ident: get
- LParen
- RParen
- Newline
- Pass
- Newline
- Dedent
